tests/run-pass/typeck/assign.rs
fn main() {
    let a: int = 0;
    a = 2
}