tests/compile-fail/semck/call-undeclared.rs
fn main() {
    a();  //! ERROR(2:5): no such function: `a`
}